--- a/server/linux-example-file-log.conf.template
+++ b/server/linux-example-file-log.conf.template
@@ -1,5 +1,5 @@
 source s_linux_example_file_log_tcp_source {
- tcp(ip(0.0.0.0) port(6516)); };
+ tcp(ip(0.0.0.0) port(6517)); };
 
 destination d_linux_example_file_elastic {
  elasticsearch2 (
@@ -11,7 +11,7 @@ destination d_linux_example_file_elastic {
    flush-limit("10000")
    cluster_url("http://127.0.0.1:9200")
    custom_id("${UNIQID}")
-   template("$(format-json --scope rfc5424 --scope nv-pairs --exclude DATA --key ISODATE)")
+   template("$(format-json --scope rfc5424 --scope nv-pairs --exclude DATE --key ISODATE)")
  );
 };
 log { source(s_linux_example_file_log_tcp_source); destination(d_linux_example_file_elastic); };
