--- a/server/windows-event-log.conf.template
+++ b/server/windows-event-log.conf.template
@@ -1,5 +1,5 @@
 source s_windows_event_log_tcp_source {
- tcp(ip(0.0.0.0) port(6515)); };
+ tcp(ip(0.0.0.0) port(6516)); };
 
 destination d_windows_event_elastic {
  elasticsearch2 (
@@ -10,14 +10,14 @@ destination d_windows_event_elastic {
    time-zone("UTC")
    flush-limit("10000")
    cluster_url("http://127.0.0.1:9200")
-   template("$(format-json --scope rfc5424 --scope nv-pairs --exclude FACILITY --exclude DATA --exclude MESSAGE --exclude PROGRAM --exclude LEGACY_MSGHDR --key ISODATE)")
+   template("$(format-json --scope rfc5424 --scope nv-pairs --exclude FACILITY --exclude DATE --exclude HOST --exclude MESSAGE --exclude PROGRAM --exclude LEGACY_MSGHDR --exclude PRIORITY  --key ISODATE)")
    custom_id("${UNIQID}")
  );
 };
 
 parser windows_event_parser {
-        csv-parser(columns("EventTime","EventType", "Severity", "Channel", "Hostname", "EventID", "SourceName", "AccountName","AccountType", "Domain", "Message")
-        flags(escape-double-char, strip-whitespace)
+        csv-parser(columns("EventTime", "Hostname", "SourceName", "EventID", "Task", "Category", "Keywords", "Channel", "AccountName", "AccountType", "Domain", "UserID", "SeverityValue", "Severity", "EventType", "ProviderGuid", "Version", "OpcodeValue", "Opcode", "ActivityID", "RelatedActivityID", "ProcessID", "ThreadID", "Message", "RecordNumber")
+        flags(strip-whitespace)
         delimiters(";")
         quote-pairs('""<>[]'));
 };
