--- a/secure/server-xpack/windows-old-event-log.conf.template
+++ b/secure/server-xpack/windows-old-event-log.conf.template
@@ -4,12 +4,15 @@ source s_windows_old_event_log_tcp_source {
 destination d_windows_old_event_elastic {
  elasticsearch2 (
    cluster("LogCluster")
-   client_mode("http")
+   client_mode("https")
    index("windows-event-old-log-${YEAR}.${MONTH}")
    type("test")
    time-zone("UTC")
    flush-limit("10000")
    cluster_url("http://127.0.0.1:9200")
+   http-auth-type("basic")
+   http-auth-type-basic-username("elastic")
+   http-auth-type-basic-password("123321")
    template("$(format-json --scope rfc5424 --scope nv-pairs --exclude FACILITY --exclude DATE --exclude HOST --exclude PROGRAM --exclude LEGACY_MSGHDR --exclude MESSAGE --exclude PRIORITY --key ISODATE)")
    custom_id("${UNIQID}")
  );
