--- a/secure/linux-example-file-client/linux-example-file-log.conf.template
+++ b/secure/linux-example-file-client/linux-example-file-log.conf.template
@@ -6,5 +6,6 @@ tcp("192.168.0.1" port(6517)
 tls(key_file("/etc/syslog-ng/cert.d/clientkey.pem")
 cert_file("/etc/syslog-ng/cert.d/clientcert.pem")
 ca_dir("/etc/syslog-ng/ca.d"))
+time_zone("Asia/Yekaterinburg")
 ); };
 log { source(s_file); destination(d_net); };
