--- a/linux-example-file-client/linux-example-file-log.conf.template
+++ b/linux-example-file-client/linux-example-file-log.conf.template
@@ -3,6 +3,6 @@ source s_file {
 };
 destination d_net {
 tcp("192.168.0.1" port(6517)
-);
-};
+time_zone("Asia/Yekaterinburg")
+); };
 log { source(s_file); destination(d_net); };
