--- a/secure/server-xpack/linux-event-log.conf.template
+++ b/secure/server-xpack/linux-event-log.conf.template
@@ -1,13 +1,15 @@
 source s_linux_event_log_tcp_source {
- tcp(ip(0.0.0.0) port(6514)); };
+ tcp(ip(0.0.0.0) port(6514)
+ time_zone("Asia/Yekaterinburg")
+ ); };
 
 destination d_linux_event_elastic {
  elasticsearch2 (
    cluster("LogCluster")
    client_mode("https")
-   index("linux-event-log-${YEAR}.${MONTH}")
+   index("u-i-event-linux-log-${YEAR}.${MONTH}")
    type("test")
-   time-zone("UTC")
+   time_zone("Asia/Yekaterinburg")
    flush-limit("10000")
    cluster_url("http://127.0.0.1:9200")
    custom_id("${UNIQID}")
