--- a/server/windows-old-event-log.conf.template
+++ b/server/windows-old-event-log.conf.template
@@ -1,17 +1,19 @@
 source s_windows_old_event_log_tcp_source {
- tcp(ip(0.0.0.0) port(6515)); };
+ tcp(ip(0.0.0.0) port(6515)
+ time_zone("Asia/Yekaterinburg")
+ ); };
 
 destination d_windows_old_event_elastic {
  elasticsearch2 (
    cluster("LogCluster")
    client_mode("http")
-   index("windows-event-old-log-${YEAR}.${MONTH}")
+   index("u-i-event-windows-old-log-${YEAR}.${MONTH}")
    type("test")
-   time-zone("UTC")
+   time_zone("Asia/Yekaterinburg")
    flush-limit("10000")
    cluster_url("http://127.0.0.1:9200")
-   template("$(format-json --scope rfc5424 --scope nv-pairs --exclude FACILITY --exclude DATE --exclude HOST --exclude PROGRAM --exclude LEGACY_MSGHDR --exclude MESSAGE --exclude PRIORITY --key ISODATE)")
    custom_id("${UNIQID}")
+   template("$(format-json --scope rfc5424 --scope nv-pairs --exclude FACILITY --exclude DATE --exclude HOST --exclude PROGRAM --exclude LEGACY_MSGHDR --exclude MESSAGE --exclude PRIORITY --key ISODATE)")
  );
 };
 
